--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,53 @@
 {
-      "compilerOptions": {
-          "target": "ES2020",
-              "lib": ["dom", "dom.iterable", "esnext"],
-                  "allowJs": false,
-                      "skipLibCheck": true,
-                          "strict": true,
-                              "noEmit": true,
-                                  "module": "esnext",
-                                      "moduleResolution": "bundler",
-                                          "resolveJsonModule": true,
-                                              "isolatedModules": true,
-                                                  "jsx": "preserve",
-                                                      "baseUrl": "./src",
-                                                          "paths": {
-                                                                "@/*": ["*"],
-                                                                      "@app/*": ["app/*"],
-                                                                            "@utils/*": ["utils/*"],
-                                                                                  "@components/*": ["components/*"],
-                                                                                        "@styles/*": ["styles/*"]
-                                                                                            }
-                                                                                              },
-                                                                                                "include": ["next-env.d.ts", "src/**/*"],
-                                                                                                  "exclude": ["node_modules"]
-                                                                                                  }
-                                                                                                  
+  "compilerOptions": {
+    "target": "ES2020",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": false,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": [
+        "*"
+      ],
+      "@app/*": [
+        "app/*"
+      ],
+      "@utils/*": [
+        "utils/*"
+      ],
+      "@components/*": [
+        "components/*"
+      ],
+      "@styles/*": [
+        "styles/*"
+      ]
+    },
+    "incremental": true,
+    "esModuleInterop": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
+  },
+  "include": [
+    "next-env.d.ts",
+    "src/**/*",
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
