--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "novated-calculator",
   "version": "1.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev -p 3001",
-    "build": "next build",
-    "start": "next start -p 3001",
+    "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "export": "next export",
+      "start": "next start -p 3001",
     "lint": "biome check ."
   },
   "dependencies": {
