--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "novated-calculator",
   "version": "1.1.0",
   "private": true,
-    "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "export": "next export",
-      "start": "next start -p 3001",
-    "lint": "biome check ."
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start -p 3001",
+    "lint": "biome check .",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "next": "latest",
@@ -18,6 +19,7 @@
     "@biomejs/biome": "latest",
     "@types/node": "25.0.9",
     "@types/react": "19.2.8",
+    "gh-pages": "^6.3.0",
     "typescript": "latest"
   }
 }
