--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
