chore: add fallback Gemini models and retry logic; Gemini modal summary UI

--- a/.env.local
+++ b/.env.local
@@ -5,4 +5,4 @@
 GEMINI_API_KEY=AIzaSyBY-0J9WD8p-FwUlgzCZVlEtIRMmxxhaIE
 
 # Optional: model to use (defaults to gemini-3-flash)
-GEMINI_MODEL=models/gemini-2.5-flash
+GEMINI_MODEL=models/gemini-3-flash-preview
