--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@google-ai/generativelanguage": "^3.7.0",
     "@google/genai": "^1.39.0",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "html2canvas": "^1.4.1",
-    "next": "latest",
+    "next": "^16.1.6",
     "react": "latest",
     "react-dom": "latest"
   },
